--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 streamlit==1.46.0
-tensorflow-cpu>=2.15.0,<=2.16.2
-pillow
-numpy
+tensorflow-cpu==2.15.0
+protobuf==3.20.3
+numpy==1.23.5
 gdown
-
-
