--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit==1.46.0
 tensorflow-cpu==2.15.0
-protobuf==3.20.3
 numpy==1.23.5
+protobuf==3.20.3
+opencv-python-headless==4.5.5.64
+pillow==9.5.0
 gdown
