--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.46.0
-tensorflow-cpu>=2.15.0,<2.16.0
-numpy==1.23.5
-protobuf==3.20.3
-opencv-python-headless==4.5.5.64
-keras==2.15.0
+tensorflow==2.11.0
+pillow
+numpy
+gdown
+
