--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-streamlit
-tensorflow-cpu>=2.15.0,<=2.16.2
-pillow
+tensorflow-cpu==2.15.0
+streamlit==1.26.0
 numpy
-gdown
+matplotlib
+pandas
+scikit-learn
+opencv-python
+Pillow
+
 
 
