--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 
-streamlit
-tensorflow-cpu==2.15.0
+streamlit==1.33.0
+tensorflow==2.12.0
 numpy
-matplotlib
-pandas
-scikit-learn
-opencv-python
 Pillow
+gdown
+
 
 
 
